# switchyard

./: .dir-locals.el  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PLAN.md  README.md  UI-design.org  UI.org  biome.json  build.rs  config.lisp  gridpool-support.org  microgrid-rs-busy-spin-issue.md  protector-limiter.yaml  protector-test.lisp  review.org  todo.org
.github/workflows/: ci.yml
microgrids/: config.2200.lisp
scenarios/: DESIGN.md  README.md  example.lisp  protector-cases.lisp
sim/: common.lisp  defaults.lisp  example_load.csv  scenarios.lisp
src/: assets_server.rs  dispatch_server.rs  lib.rs  proto.rs  proto_conv.rs  server.rs  timeout_tracker.rs  tui_log.rs  ui.rs  ui_log.rs
src/lisp/: boot.rs  csv_profile.rs  defuns.rs  handle.rs  label.rs  make.rs  mod.rs  overrides.rs  runtime_modes.rs  snapshots.rs  test_support.rs  value.rs
src/lisp/defuns/: clock.rs  frequency.rs  fs.rs  grid_state.rs  load_drivers.rs  log.rs  metadata.rs  microgrids.rs  mod.rs  queries.rs  reactive.rs  reset.rs  runtime_modes.rs  scenarios.rs  setpoints.rs  time.rs  watches.rs  world_ops.rs
src/sim/: battery.rs  bounds.rs  chp.rs  clock.rs  component.rs  decay.rs  dispatch.rs  dynamic_scalar.rs  ev_charger.rs  events.rs  frequency.rs  graph_adapter.rs  grid.rs  history.rs  meter.rs  microgrid_site.rs  microgrids.rs  mod.rs  ramp.rs  reactive.rs  runtime.rs  scenario.rs  scenario_csv.rs  scenarios.rs  setpoints.rs  sim_clock.rs  world.rs
src/sim/inverter/: battery_inverter.rs  mod.rs  solar_inverter.rs
src/sim/microgrid_site/: history.rs  mod.rs  scenarios.rs
src/ui/: events_ws.rs  loopback.rs  mod.rs  state.rs  tests.rs
src/ui/handlers/: assets.rs  defaults.rs  dispatches.rs  eval.rs  history.rs  microgrid_data.rs  microgrids.rs  mod.rs  overrides.rs  scenarios.rs  snapshots.rs  topology.rs
tests/: grpc.rs  grpc_assets.rs  hot_reload.rs  scenario.rs  timeout.rs  ui_http.rs
tests/common/: mod.rs
ui-assets/: app.js  chrome.js  dashboard.js  dialogs.js  dispatch-form.js  editor.js  formulas.js  index.html  inspect.js  panels.js  repl-syntax.js  repl.js  routing.js  splitter.js  style.css  topology.js
