[package]
name = "switchyard"
version = "0.1.0"
edition = "2024"
default-run = "switchyard"

[dependencies]
tonic-prost = "0.14"
tonic = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.15"
tulisp = { git = "https://github.com/shsms/tulisp", features = ["sync"] }
tulisp-async = { path = "../tulisp-async" }
notify = "6.1.1"
futures = "0.3.30"
log = "0.4.22"
simplelog = "0.12.2"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.42"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = { version = "0.14", features = ["cleanup-markdown"] }

[dev-dependencies]
# axum oneshot testing pattern — no live port needed
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lib]
name = "switchyard"
path = "src/lib.rs"

[[bin]]
name = "switchyard"
path = "src/bin/switchyard.rs"

[[bin]]
name = "swctl"
path = "src/bin/swctl.rs"
