[package]
name = "switchyard"
version = "0.1.0"
edition = "2024"
default-run = "switchyard"

[dependencies]
tonic-prost = "0.14"
tonic = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.15"
tulisp = { git = "https://github.com/shsms/tulisp", features = ["sync", "etags"] }
tulisp-fmt = { git = "https://github.com/tulisp/tulisp-fmt" }
tulisp-async = { git = "https://github.com/tulisp/tulisp-async" }
notify = "6.1.1"
futures = "0.3.30"
# DAG validation + formula generation for the Dashboard's aggregated
# tiles. Switchyard implements Node + Edge on its own component /
# connection types in src/sim/graph_adapter.rs and runs the validator
# at the end of each config-load / reload.
frequenz-microgrid-component-graph = "0.5"
# High-level Microgrid client + typed metric streams. The UI server
# runs this as a client of switchyard's own gRPC server on localhost
# (see UI-design.org §Z2): aggregated Dashboard tiles read from the
# same LogicalMeterHandle::xxx<M>().subscribe() streams a production
# downstream control app would consume.
frequenz-microgrid = "0.4"
log = "0.4.22"
simplelog = "0.12.2"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
# swctl talks to the UI server's HTTP surface for scenario commands —
# the scenario lifecycle isn't on gRPC.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tonic-prost-build = { version = "0.14", features = ["cleanup-markdown"] }

[dev-dependencies]
# axum oneshot testing pattern — no live port needed
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Out-of-process integration tests in tests/ talk to the live
# HTTP / gRPC surface; reqwest is already a regular dep for swctl,
# we just need a temp dir for per-test config files.
tempfile = "3"

[lib]
name = "switchyard"
path = "src/lib.rs"

[[bin]]
name = "switchyard"
path = "src/bin/switchyard.rs"

[[bin]]
name = "swctl"
path = "src/bin/swctl.rs"

[[bin]]
name = "switchyard-etags"
path = "src/bin/switchyard-etags.rs"
